# Transformer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: example.rs  lib.rs  main.rs  settings.rs
src/activation/: activation_functions.rs
src/attention/: multihead_attention.rs  scaled_dot_attention.rs  softmax.rs
src/data/: dataset.rs  generation.rs  io.rs  learnable.rs  tokenizer.rs
src/data/in/: training_input.txt  training_input_full.txt
src/layers/: feedforward_layer.rs  normalization.rs
src/math/: activation.rs  linear_algebra.rs  positional_encoding.rs  softmax.rs
src/model/: decoder.rs  embedding.rs  encoder.rs  train_transformer.rs  transformer_model.rs
src/training/: loss_function.rs  train.rs
src/utils/: activation.rs  linear_algebra.rs
tests/: activation_tests.rs  linear_algebra_test.rs  multihead_attention_test.rs  positional_encoding_test.rs  scaled_dot_attention_test.rs  softmax_test.rs
