[package]
name = "Transformer"
version = "0.1.0"
edition = "2021"
authors = ["Jakub Schwenkbeck"]
license = "MIT"
repository = "https://github.com/JakubSchwenkbeck/Transformer"
description = "A Rust implementation of a Transformer-based model for NLP tasks."

[dependencies]
ndarray = "0.16.1"
rand = "0.9.0-beta.1"
regex = "1.11.1"
